# Computacion-en-la-nube

./: .gitignore
Deep_learning_datos_secuenciales/Proyecto_final_nlp/: Entregable1.ipynb  README.md  app.py  dataframe.csv  pyproject.toml  requirements.txt  subtitulando.py  traduce.py  transcribe.py
Desarrollo_de_proyectos_con_IA/proyecto final/: app.py  backen_funcions.py  carga_libros.py  file_libros  funcion_retrievel.py  notebook.ipynb  pyproject.toml
computacion_en_la_nube/Practica1/: Vagrantfile
computacion_en_la_nube/Practica1/Tensorflow/: Vagrantfile
computacion_en_la_nube/Practica1/carpeta_compartida/: archivo1
computacion_en_la_nube/Practica2/Aprovisionamiento/: Vagrantfile  script.sh
computacion_en_la_nube/Practica2/Balanceo_de_carga/: Vagrantfile
computacion_en_la_nube/Practica2/Service_discovery/: Vagrantfile
computacion_en_la_nube/microproyecto_modulo2/: Vagrantfile  script_haproxy.sh  script_service1.sh  script_service2.sh
computacion_en_la_nube/microproyecto_modulo2/Shared_Folder_proyect01/: agent_service1.txt  agent_service2.txt  haproxi_config
computacion_en_la_nube/microproyecto_modulo2v2/: Vagrantfile  script_service1.sh  script_service2.sh  version del proyecto
computacion_en_la_nube/microproyecto_modulo3/: clasificador-imagenes-config.yaml  deployment-service-apache.yaml  deployment-service-mongo.yaml  deployment-service-nodejs.yaml  enlaces
computacion_en_la_nube/microproyecto_modulo3/despliege_deep_learning/: app.py  (+3 more)
computacion_en_la_nube/proyecto-final/: Dockerfile  app.py  database_funcion.py  pyproject.toml  retrival.py
(+25 files in other folders)
